--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,24 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.App-Body {
+  background-color: #f0f2f5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #1877f2;
+}
+.App h1{
+  font-size:60px;
+  max-width: 100%;
+}
+.card{
+  max-width: 100%;
+}
+.card p{
+  color:black;
 }
 
 .App-link {
