--- a/src/App.css
+++ b/src/App.css
@@ -22,15 +22,30 @@
   justify-content: center;
   color: #1877f2;
 }
-.App h1{
+.App-Body h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size:60px;
   max-width: 100%;
+}
+.App-Body button{
+  margin: 0 40px 0 30px;
+  background-color: #1877f2;
+  color: #f0f2f5;
+  border-radius: 6px;
+}
+.App-Body input{
+  margin: 10px ;
 }
 .card{
   max-width: 100%;
 }
 .card p{
   color:black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-link {
